--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@next/font": "13.1.6",
+    "@next/font": "^13.1.6",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "next": "13.1.6",
@@ -17,5 +17,8 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
     "tachyons": "^4.12.0"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.2.6"
   }
 }
